[gd_scene load_steps=17 format=2]

[ext_resource path="res://temp_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]
resource_local_to_scene = true
hinting = 0
font_path = "res://assets/msgothic.ttf"

[sub_resource type="DynamicFont" id=8]
size = 19
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 29
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.215686, 0, 0.807843, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.486275 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0.717647, 1, 0.584314 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.717647, 1, 0.584314 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 0, 0, 0.501961 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.145098, 0.380392, 1, 0.501961 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.501961 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.819608, 0, 0.466667 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0 )
anti_aliasing = false

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MagLabel" type="Label" parent="."]
margin_top = 208.0
margin_right = 38.0
margin_bottom = 228.0
rect_rotation = -89.9999
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Mag"

[node name="AmmoLabel" type="Label" parent="."]
margin_top = 472.0
margin_right = 38.0
margin_bottom = 492.0
rect_rotation = -89.9999
custom_colors/font_color = Color( 0.145098, 0.380392, 1, 0.501961 )
custom_fonts/font = SubResource( 8 )
text = "Ammo"

[node name="ReloadLabel" type="Label" parent="."]
visible = false
margin_top = 400.0
margin_right = 174.0
margin_bottom = 448.0
rect_rotation = -89.9999
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "RELOADING..."

[node name="HealthLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 376.0
margin_right = 96.0
margin_bottom = 395.0
rect_rotation = -89.9999
custom_colors/font_color = Color( 1, 0.819608, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Health"

[node name="SpeedLabel" type="Label" parent="."]
margin_left = 768.0
margin_right = 816.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.215686, 0, 0.807843, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Speed"

[node name="ConstLabel" type="Label" parent="."]
margin_left = 768.0
margin_top = 16.0
margin_right = 816.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.0431373, 0.466667, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Entropy"

[node name="ConstLabel2" type="Label" parent="."]
margin_left = 768.0
margin_top = 32.0
margin_right = 816.0
margin_bottom = 51.0
custom_colors/font_color = Color( 0.215686, 0, 0.807843, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Juice"

[node name="ConstLabel3" type="Label" parent="."]
margin_left = 768.0
margin_top = 48.0
margin_right = 816.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0.215686, 0, 0.807843, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Heat"

[node name="SpeedBar" type="ProgressBar" parent="."]
margin_left = 64.0
margin_right = 768.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.215686, 0, 0.807843, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/fg = SubResource( 11 )
custom_styles/bg = SubResource( 7 )
max_value = 300.0
percent_visible = false

[node name="ConstBar0" type="ProgressBar" parent="."]
margin_left = 64.0
margin_top = 16.0
margin_right = 768.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.215686, 0, 0.807843, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 7 )
max_value = 500.0
step = 1.0
percent_visible = false

[node name="ConstBar1" type="ProgressBar" parent="."]
margin_left = 64.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0.215686, 0, 0.807843, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
max_value = 50.0
percent_visible = false

[node name="ConstBar2" type="ProgressBar" parent="."]
margin_left = 64.0
margin_top = 48.0
margin_right = 768.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.215686, 0, 0.807843, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
max_value = 500.0
percent_visible = false

[node name="AbilityBar0" type="ProgressBar" parent="."]
margin_left = 840.0
margin_right = 937.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.215686, 0, 0.807843, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
max_value = 300.0
percent_visible = false

[node name="AbilityBar1" type="ProgressBar" parent="."]
margin_left = 840.0
margin_top = 16.0
margin_right = 937.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.215686, 0, 0.807843, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
max_value = 300.0
percent_visible = false

[node name="MagBar" type="ProgressBar" parent="."]
margin_left = 32.0
margin_top = 64.0
margin_right = 300.0
margin_bottom = 96.0
rect_rotation = 90.0
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 4 )
allow_greater = true
allow_lesser = true
percent_visible = false

[node name="AmmoBar" type="ProgressBar" parent="."]
margin_left = 32.0
margin_top = 332.0
margin_right = 300.0
margin_bottom = 364.0
rect_rotation = 90.0
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 4 )
value = 3.49
allow_greater = true
allow_lesser = true
percent_visible = false

[node name="ReloadBar" type="ProgressBar" parent="."]
visible = false
margin_left = 32.0
margin_top = 64.0
margin_right = 544.0
margin_bottom = 96.0
rect_rotation = 90.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
allow_greater = true
allow_lesser = true
percent_visible = false

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 600.0
margin_bottom = 96.0
rect_rotation = 90.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 5 )
value = 50.0
allow_greater = true
allow_lesser = true
percent_visible = false

[node name="Face" type="TextureRect" parent="."]
margin_right = 642.0
margin_bottom = 1280.0
rect_scale = Vector2( 0.1, 0.05 )
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Label" type="Label" parent="."]
margin_left = 800.0
margin_top = 560.0
margin_right = 1023.0
margin_bottom = 603.0
text = "Delta-T Milestone 1 03/08/22 
PRE-ALPHA "
align = 1

[node name="DebugLabel" type="Label" parent="."]
margin_left = 848.0
margin_top = 120.0
margin_right = 1020.0
margin_bottom = 278.0
align = 2

[node name="AbilityLabel0" type="Label" parent="."]
margin_left = 937.0
margin_right = 1009.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 1 )
text = "Speed Up"

[node name="AbilityLabel1" type="Label" parent="."]
margin_left = 937.0
margin_top = 16.0
margin_right = 1009.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 1 )
text = "Add Dmg"
